--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
 
                 <div class="card-body">
                     <h2 class="title">ลงทะเบียน</h2>
+                    <div style="text-align: left; margin: 20px 0;">
+                        <button onclick="window.location.href='artistry_table.html'"
+                                style="padding: 10px 22px; 
+                                    background: #6c1b9a; 
+                                    color: white; 
+                                    border: none; 
+                                    border-radius: 8px;
+                                    cursor: pointer;
+                                    font-size: 16px;">
+                            ตรวจสอบรายชื่อผู้ลงทะเบียน
+                        </button>
+                    </div>
+
 
                     <form method="POST" id="registerForm">
 
