migrate project to beyond25-registration

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Colorlib">
     <meta name="keywords" content="Colorlib Templates">
 
-    <title>Artistry Register</title>
+    <title>beyond25 Register</title>
 
     <!-- Icons -->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -51,9 +51,9 @@
                 <div class="card-body">
                     <h2 class="title">ลงทะเบียน</h2>
                     <div style="text-align: left; margin: 20px 0;">
-                        <button onclick="window.location.href='artistry_table.html'"
+                        <button onclick="window.location.href='display.html'"
                                 style="padding: 10px 22px; 
-                                    background: #6c1b9a; 
+                                    background: #43c033; 
                                     color: white; 
                                     border: none; 
                                     border-radius: 8px;
@@ -94,6 +94,19 @@
                                     <option value="PTอ๊อฟ01">PTอ๊อฟ01</option>
                                     <option value="PTอ๊อฟ02">PTอ๊อฟ02</option>
                                     <option value="PTอ๊อฟXX">PTอ๊อฟXX</option>
+                                </select>
+                                <div class="select-dropdown"></div>
+                            </div>
+                        </div>
+
+                        <div class="input-group">
+                            <div class="rs-select2 js-select-simple select--no-search">
+                                <select id="ticketType" name="class">
+                                    <option disabled="disabled" selected="selected">เลือกประเภทบัตร</option>
+                                    <!-- <option  value="Early Bird" id="ticket_earlybird">Early Bird</option> -->
+                                    <option  value="Early Bird" id="ticket_earlybird">Early Bird</option>
+                                    <option value="วันเสาร์ 1 วัน" id="ticket_saturday">วันเสาร์ 1 วัน</option>
+                                    <option value="วันอาทิตย์ 1 วัน" id="ticket_sunday">วันอาทิตย์ 1 วัน</option>
                                 </select>
                                 <div class="select-dropdown"></div>
                             </div>
