--- a/display.html
+++ b/display.html
@@ -2,15 +2,15 @@
 <html lang="th">
 <head>
     <meta charset="UTF-8">
-    <title>Artistry Registration Table</title>
+    <title>Beyond25 Registration Table</title>
     <link rel="stylesheet" href="./css/display.css">
 
 </head>
 <body>
 
-<h2>ตารางข้อมูลผู้ลงทะเบียน Artistry</h2>
+<h2>รายชื่อผู้ลงทะเบียน Beyond25</h2>
 
-<button onclick="loadTable()">รีเฟรชตาราง</button>
+<button onclick="loadTable()">Refresh</button>
 
 <table id="regTable">
     <thead>
@@ -18,6 +18,7 @@
             <th>ชื่อ–นามสกุล</th>
             <th>ชื่อเล่น</th>
             <th>สายงาน</th>
+            <th>ประเภทบัตร</th>
             <th>สถานะ</th>
             <th>สลิป</th>
         </tr>
