--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Colorlib">
     <meta name="keywords" content="Colorlib Templates">
 
-    <title>beyond25 Register</title>
+    <title>Beyond25 Registration (test)</title>
 
     <!-- Icons -->
     <link href="vendor/mdi-font/css/material-design-iconic-font.min.css" rel="stylesheet" media="all">
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="card-body">
-                    <h2 class="title">ลงทะเบียน</h2>
+                    <h2 class="title">ลงทะเบียน (สามารถทดสอบได้)</h2>
                     <div style="text-align: left; margin: 20px 0;">
                         <button onclick="window.location.href='display.html'"
                                 style="padding: 10px 22px; 
